2000-11-05  Mike Crowe <mac@fysh.org>

	* First public version 0.01 realeased.

2003-08-05  Mike Crowe <mac@fysh.org>

	* ID3v2 support added.

2004-02-06  Mike Crowe <mac@fysh.org>

	* Support for just dumping the bitrate of every frame added

2004-02-07  Mike Crowe <mac@fysh.org>

	* Released as v1.01

2004-02-10  Mike Crowe <mac@fysh.org>

	* Fix some packaging problems
	* Released as v1.02