@@ -18,3 +18,7 @@
 
 	* Fix some packaging problems
 	* Released as v1.02
+
+2004-02-10  Mike Crowe <mac@fysh.org>
+
+	* Now compiles on GCC3.
